# torch_tem

./: .gitignore  pyproject.toml  run.py  run_design.py  run_lstm.py  run_study.py  run_study_v3.py  test.py
envs/: 2x3.json  2x3_env1.json  2x3_env2.json  2x3_spec.json  mckenzie2024.json
jupyter/: operators_learning_v2.ipynb  operators_learning_v3.ipynb  test.ipynb  test_mckenzie.ipynb  test_operators.ipynb  train.ipynb  train_design_pl.ipynb  train_study.ipynb  train_study_v1.ipynb  train_study_v3.ipynb
jupyter/old/: explore.ipynb  train_design.ipynb  train_design_al.ipynb  train_study_assoc.ipynb
params/: operators.json  parameters.json
src/tem/: analyse.py  figures.py  model.py  parameters.py  utils.py  world.py
