[project]
name = "tem"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "tensorflow",
    "polars",
    "seaborn",
    "matplotlib",
    "tensorboard>=2.20.0",
    "ipykernel>=7.2.0",
    "setuptools<81.0",
    "scipy-stubs~=1.17.1",
    "tbparse>=0.0.9",
    "pyarrow>=23.0.1",
    "black>=26.3.1",
    "pingouin>=0.6.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
